# centered-kernel-alignment

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  main.py  prek.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_feature_request.yml  3_question.yml
.github/workflows/: publish-to-pypi.yml
cka/: __init__.py  cka.py  core.py  hsic.py  utils.py
ckatorch/: cka.py  hsic.py
examples/: README.md  cka.json  cka.safetensors  ff_network.py  hf_transformers.py  plot_saved_matrix.py
src/ckatorch/: __init__.py  cka.py  core.py  hsic.py  plot.py  utils.py
