[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ckatorch"
readme = "README.md"
license = {file = "LICENSE"}
version = "1.0.2"
description = "Centered Kernel Alignment in PyTorch"
authors = [
  {name = "Alessandro Ristori", email = "aleristori97@gmail.com"}
]
requires-python = ">=3.10"
keywords = ["CKA", "Centered Kernel Alignment", "Neural Network Similarity", "Deep Learning"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "matplotlib>=3.8.0",
  "pyyaml>=6.0.2",
  "safetensors>=0.4.2",
  "seaborn>=0.12.2",
  "torch>=2.3.1",
  "tqdm>=4.66.3",
]

[project.urls]
Homepage = "https://github.com/RistoAle97/centered-kernel-alignment"
Repository = "https://github.com/RistoAle97/centered-kernel-alignment"
Issues = "https://github.com/RistoAle97/centered-kernel-alignment/issues"

[dependency-groups]
dev = [
  "prek>=0.2.23",
  "ruff>=0.12.9",
]

[tool.ruff]
line-length = 120
output-format = "grouped"
target-version = "py310"

[tool.ruff.lint]
select = [
  "ARG", # flake8-unused-arguments
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "D", # pydocstyle errors
  "E", # pycodestyle errors
  "F", # pyflakes
  "I", # isort
  "N", # pep8-naming
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify
  "TID",  # flake8-tidy-imports
  "UP", # pyupgrade
]

[tool.ruff.lint.extend-per-file-ignores]
"examples/*" = ["D"]

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.uv.sources]
torch = [
  {index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
